--- a/index.html
+++ b/index.html
@@ -1,6 +1,123 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Rozita Shams Studio | استودیو تخصصی عکاسی تبلیغاتی</title>
+  <meta name="description" content="استودیو Rozita Shams با تخصص در عکاسی محصولات بهداشتی و زیبایی، بهترین کیفیت و خلاقیت را برای تبلیغات برند شما ارائه می‌دهد.">
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f5f2;
+      color: #333;
+    }
+    header {
+      background-color: #e0d6cc;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      margin-top: 10px;
+    }
+    nav a {
+      color: #5c5048;
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: bold;
+    }
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background-color: #f0ebe6;
+    }
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 1.2em;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .services {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+    }
+    .service {
+      background-color: #ffffff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    footer {
+      background-color: #e0d6cc;
+      text-align: center;
+      padding: 10px;
+      font-size: 0.9em;
+      margin-top: 30px;
+    }
+    @media (max-width: 600px) {
+      .services {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Rozita Shams Studio</h1>
+  <nav>
+    <a href="#services">خدمات</a>
+    <a href="#about">درباره ما</a>
+    <a href="#contact">تماس</a>
+  </nav>
+</header>
+
+<div class="hero">
+  <h1>عکاسی تبلیغاتی تخصصی</h1>
+  <p>تمرکز بر عکاسی محصولات بهداشتی و زیبایی</p>
+</div>
+
+<section id="services">
+  <h2>خدمات ما</h2>
+  <div class="services">
+    <div class="service">
+      <h3>عکاسی محصولات بهداشتی</h3>
+      <p>تصاویر باکیفیت بالا مخصوص تبلیغات برند شما</p>
+    </div>
+    <div class="service">
+      <h3>عکاسی زیبایی و سلامت</h3>
+      <p>ایجاد تصاویری جذاب و حرفه‌ای برای معرفی محصولات آرایشی و بهداشتی</p>
+    </div>
+  </div>
+</section>
+
+<section id="about">
+  <h2>درباره استودیو</h2>
+  <p>Rozita Shams Studio با هدف تولید محتوای حرفه‌ای برای برندهای بهداشتی و آرایشی راه‌اندازی شده است. ما به جزئیات اهمیت می‌دهیم و تصاویر خاصی برای شما خلق می‌کنیم.</p>
+</section>
+
+<section id="contact">
+  <h2>تماس با ما</h2>
+  <p>از طریق اینستاگرام: <a href="https://instagram.com/rozita_shams_studio" target="_blank">@rozita_shams_studio</a></p>
+</section>
+
+<footer>
+  طراحی شده با عشق توسط Rozita Shams Studio
+</footer>
+
+</body>
+</html><!DOCTYPE html>
+<html lang="fa" dir="rtl">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rozita Shams Studio | استودیو رزیتا شمس</title>
