--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@ https://github.com/rozitashams/rozitashams.github.io/tree/main
 <header>
   <h1>Rozita Shams Studio</h1>
   <nav>
-    <a href="#services">خدمات</a>
+    <a href="#services">خدمات</a><img src="green2.jpg" alt="محصول green2" width="300">
+<img src="perfumeee.jpg" alt="محصول perfumeee" width="300">
+<img src="perfume6.jpg" alt="محصول perfume6" width="300">
+<img src="new.roj.jpg" alt="محصول new.roj" width="300">
+<img src="sun.jpg" alt="محصول sun" width="300">
     <a href="#about">درباره ما</a>
     <a href="#contact">تماس</a>
   </nav>
