--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 https://github.com/rozitashams/rozitashams.github.io/tree/main
-<!DOCTYPE html>
+<!DOCTYPE html><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="رزیتا شمس، متخصص در عکاسی محصول و تبلیغاتی برای برندها. خدمات عکاسی حرفه‌ای برای فروشگاه‌های آنلاین و وب‌سایت‌ها.">
+    <meta name="keywords" content="عکاسی محصول، عکاسی تبلیغاتی، عکاسی برند، عکاسی برای فروشگاه آنلاین">
+    <meta name="author" content="رزیتا شمس">
+    <title>رزیتا شمس - عکاسی محصول و تبلیغاتی</title>
+</head>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
