--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 https://github.com/rozitashams/rozitashams.github.io/tree/main
 <!DOCTYPE html><head>googlecd903541df886bd7.html
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"><meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="رزیتا شمس، متخصص در عکاسی محصول و تبلیغاتی برای برندها. خدمات عکاسی حرفه‌ای برای فروشگاه‌های آنلاین و وب‌سایت‌ها.">
     <meta name="keywords" content="عکاسی محصول، عکاسی تبلیغاتی، عکاسی برند، عکاسی برای فروشگاه آنلاین">
