--- a/index.html
+++ b/index.html
@@ -86,7 +86,22 @@ https://github.com/rozitashams/rozitashams.github.io/tree/main
     <a href="#services">خدمات</a><img src="green2.jpg" alt="محصول green2" width="300">
 <img src="perfumeee.jpg" alt="محصول perfumeee" width="300">
 <img src="perfume6.jpg" alt="محصول perfume6" width="300">
-<img src="new.roj.jpg" alt="محصول new.roj" width="300">
+<img src="new.roj.jpg" alt="محصول new.roj" width="300"><h2 style="text-align:center;">عطرها</h2>
+<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 40px;">
+  <img src="green2.jpg" alt="عطر سبز" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+  <img src="perfumeee.jpg" alt="عطر شیشه‌ای" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+</div>
+
+<h2 style="text-align:center;">آرایشی</h2>
+<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 40px;">
+  <img src="new.roj.jpg" alt="رژ لب جدید" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+</div>
+
+<h2 style="text-align:center;">بهداشتی</h2>
+<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 40px;">
+  <img src="sun.jpg" alt="کرم ضد آفتاب" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+  <img src="perfume6.jpg" alt="عطر بهداشتی" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+</div>
 <img src="sun.jpg" alt="محصول sun" width="300">
     <a href="#about">درباره ما</a>
     <a href="#contact">تماس</a>
