--- a/index.html
+++ b/index.html
@@ -1,145 +1,70 @@
-https://github.com/rozitashams/rozitashams.github.io/tree/main
-<!DOCTYPE html><head>googlecd903541df886bd7.html
-    <meta charset="UTF-8"><meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="رزیتا شمس، متخصص در عکاسی محصول و تبلیغاتی برای برندها. خدمات عکاسی حرفه‌ای برای فروشگاه‌های آنلاین و وب‌سایت‌ها.">
-    <meta name="keywords" content="عکاسی محصول، عکاسی تبلیغاتی، عکاسی برند، عکاسی برای فروشگاه آنلاین">
-    <meta name="author" content="رزیتا شمس">
-    <title>رزیتا شمس - عکاسی محصول و تبلیغاتی</title>
-</head>
+
+<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rozita Shams Studio | استودیو تخصصی عکاسی تبلیغاتی</title>
-  <meta name="description" content="استودیو Rozita Shams با تخصص در عکاسی محصولات بهداشتی و زیبایی، بهترین کیفیت و خلاقیت را برای تبلیغات برند شما ارائه می‌دهد.">
+  <meta name="description" content="عکاسی محصول توسط رزیتا شمس | عطر، لوازم آرایشی و بهداشتی">
+  <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
+  <title>رزیتا شمس | عکاسی محصول</title>
   <style>
     body {
       font-family: sans-serif;
+      background-color: #fff;
       margin: 0;
-      padding: 0;
-      background-color: #f8f5f2;
-      color: #333;
-    }
-    header {
-      background-color: #e0d6cc;
       padding: 20px;
+    }
+    h1, h2 {
       text-align: center;
+      color: #444;
     }
-    nav {
-      margin-top: 10px;
+    .gallery-section {
+      margin-bottom: 50px;
     }
-    nav a {
-      color: #5c5048;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
     }
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-      background-color: #f0ebe6;
+    .gallery img {
+      width: 200px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: transform 0.3s;
     }
-    .hero h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 1.2em;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    .services {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-    }
-    .service {
-      background-color: #ffffff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    footer {
-      background-color: #e0d6cc;
-      text-align: center;
-      padding: 10px;
-      font-size: 0.9em;
-      margin-top: 30px;
-    }
-    @media (max-width: 600px) {
-      .services {
-        grid-template-columns: 1fr;
-      }
+    .gallery img:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Rozita Shams Studio</h1>
-  <nav>
-    <a href="#services">خدمات</a><img src="green2.jpg" alt="محصول green2" width="300">
-<img src="perfumeee.jpg" alt="محصول perfumeee" width="300">
-<img src="perfume6.jpg" alt="محصول perfume6" width="300">
-<img src="new.roj.jpg" alt="محصول new.roj" width="300"><h2 style="text-align:center;">عطرها</h2>
-<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 40px;">
-  <img src="green2.jpg" alt="عطر سبز" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-  <img src="perfumeee.jpg" alt="عطر شیشه‌ای" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-</div>
+  <h1>رزیتا شمس | عکاسی حرفه‌ای محصول</h1>
+  <p style="text-align:center; color:#666;">نمونه کارهای عکاسی محصول - دسته‌بندی‌شده</p>
 
-<h2 style="text-align:center;">آرایشی</h2>
-<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 40px;">
-  <img src="new.roj.jpg" alt="رژ لب جدید" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-</div>
-
-<h2 style="text-align:center;">بهداشتی</h2>
-<div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 40px;">
-  <img src="sun.jpg" alt="کرم ضد آفتاب" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-  <img src="perfume6.jpg" alt="عطر بهداشتی" style="width: 200px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-</div>
-<img src="sun.jpg" alt="محصول sun" width="300">
-    <a href="#about">درباره ما</a>
-    <a href="#contact">تماس</a>
-  </nav>
-</header>
-
-<div class="hero">
-  <h1>عکاسی تبلیغاتی تخصصی</h1>
-  <p>تمرکز بر عکاسی محصولات بهداشتی و زیبایی</p>
-</div>
-
-<section id="services">
-  <h2>خدمات ما</h2>
-  <div class="services">
-    <div class="service">
-      <h3>عکاسی محصولات بهداشتی</h3>
-      <p>تصاویر باکیفیت بالا مخصوص تبلیغات برند شما</p>
-    </div>
-    <div class="service">
-      <h3>عکاسی زیبایی و سلامت</h3>
-      <p>ایجاد تصاویری جذاب و حرفه‌ای برای معرفی محصولات آرایشی و بهداشتی</p>
+  <div class="gallery-section">
+    <h2>عطرها</h2>
+    <div class="gallery">
+      <img src="green2.jpg" alt="عطر سبز">
+      <img src="perfumeee.jpg" alt="عطر شیشه‌ای">
     </div>
   </div>
-</section>
 
-<section id="about">
-  <h2>درباره استودیو</h2>
-  <p>Rozita Shams Studio با هدف تولید محتوای حرفه‌ای برای برندهای بهداشتی و آرایشی راه‌اندازی شده است. ما به جزئیات اهمیت می‌دهیم و تصاویر خاصی برای شما خلق می‌کنیم.</p>
-</section>
+  <div class="gallery-section">
+    <h2>آرایشی</h2>
+    <div class="gallery">
+      <img src="new.roj.jpg" alt="رژ لب جدید">
+    </div>
+  </div>
 
-<section id="contact">
-  <h2>تماس با ما</h2>
-  <p>از طریق اینستاگرام: <a href="https://instagram.com/rozita_shams_studio" target="_blank">@rozita_shams_studio</a></p>
-</section>
-
-<footer>
-  طراحی شده با عشق توسط Rozita Shams Studio
-</footer>
+  <div class="gallery-section">
+    <h2>بهداشتی</h2>
+    <div class="gallery">
+      <img src="sun.jpg" alt="ضد آفتاب">
+      <img src="perfume6.jpg" alt="عطر بهداشتی">
+    </div>
+  </div>
 
 </body>
 </html>
