--- a/index.html
+++ b/index.html
@@ -67,4 +67,11 @@
   </div>
 
 </body>
-</html>
+</html><div style="text-align:center; margin-top: 40px;">
+  <a href="https://wa.me/YourPhoneNumber" target="_blank" style="margin-right: 20px; text-decoration: none;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+  </a>
+  <a href="https://www.instagram.com/yourusername" target="_blank" style="text-decoration: none;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
+  </a>
+</div>
