--- a/index.html
+++ b/index.html
@@ -75,3 +75,4 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
   </a>
 </div><a href="https://wa.me/YourPhoneNumber" target="_blank" style="margin-right: 20px; text-decoration: none;">
+<a href="https://www.instagram.com/" https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" style="text-decoration: none;">
