--- a/index.html
+++ b/index.html
@@ -1,78 +1,77 @@
 
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="عکاسی محصول توسط رزیتا شمس | عطر، لوازم آرایشی و بهداشتی">
+  <meta name="description" content="محصولات عطر، آرایشی و بهداشتی با بهترین کیفیت - فروشگاه رزیتا">
+  <meta name="keywords" content="عطر، آرایشی، بهداشتی، رزیتا، خرید عطر">
   <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
-  <title>رزیتا شمس | عکاسی محصول</title>
+  <title>فروشگاه رزیتا</title>
   <style>
     body {
       font-family: sans-serif;
-      background-color: #fff;
+      background-color: #f3f0e8;
+      color: #333;
       margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    h1 {
+      background-color: #d5c4a1;
+      padding: 20px;
+      margin: 0;
+    }
+    section {
       padding: 20px;
     }
-    h1, h2 {
-      text-align: center;
-      color: #444;
+    img {
+      width: 150px;
+      margin: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
-    .gallery-section {
-      margin-bottom: 50px;
+    .social {
+      margin: 30px;
     }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-    }
-    .gallery img {
-      width: 200px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
-    }
-    .gallery img:hover {
-      transform: scale(1.05);
+    .social a img {
+      width: 50px;
+      height: 50px;
+      margin: 0 10px;
+      border-radius: 50%;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
     }
   </style>
 </head>
 <body>
 
-  <h1>رزیتا شمس | عکاسی حرفه‌ای محصول</h1>
-  <p style="text-align:center; color:#666;">نمونه کارهای عکاسی محصول - دسته‌بندی‌شده</p>
+  <h1>فروشگاه رزیتا</h1>
 
-  <div class="gallery-section">
-    <h2>عطرها</h2>
-    <div class="gallery">
-      <img src="green2.jpg" alt="عطر سبز">
-      <img src="perfumeee.jpg" alt="عطر شیشه‌ای">
-    </div>
-  </div>
+  <section>
+    <h2>محصولات عطر</h2>
+    <img src="perfumeee.jpg" alt="عطر شماره ۱">
+    <img src="perfume6.jpg" alt="عطر شماره ۲">
+  </section>
 
-  <div class="gallery-section">
-    <h2>آرایشی</h2>
-    <div class="gallery">
-      <img src="new.roj.jpg" alt="رژ لب جدید">
-    </div>
-  </div>
+  <section>
+    <h2>محصولات آرایشی</h2>
+    <img src="green2.jpg" alt="محصول آرایشی ۱">
+    <img src="new.roj.jpg" alt="محصول آرایشی ۲">
+  </section>
 
-  <div class="gallery-section">
-    <h2>بهداشتی</h2>
-    <div class="gallery">
-      <img src="sun.jpg" alt="ضد آفتاب">
-      <img src="perfume6.jpg" alt="عطر بهداشتی">
-    </div>
+  <section>
+    <h2>محصولات بهداشتی</h2>
+    <img src="sun.jpg" alt="محصول بهداشتی ۱">
+  </section>
+
+  <div class="social">
+    <a href="https://wa.me/989123456789" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساپ">
+    </a>
+    <a href="https://www.instagram.com/rezitashams" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="اینستاگرام">
+    </a>
   </div>
 
 </body>
-</html><div style="text-align:center; margin-top: 40px;">
-  <a href="https://wa.me/989121839844" target="_blank" style="margin-right: 20px; text-decoration: none;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-  </a>
-  <a href="https://www.instagram.com/rozita_shams_studio" target="_blank" style="text-decoration: none;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 2px 6px rgba(0,0,0,0.3);">
-  </a>
-</div><a href="https://wa.me/989121839844" target="_blank" style="margin-right: 20px; text-decoration: none;">
-<a href="https://www.instagram.com/" https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" style="text-decoration: none;">
+</html>
