--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="محصولات عطر، آرایشی و بهداشتی با بهترین کیفیت - فروشگاه رزیتا">
-  <meta name="keywords" content="عطر، آرایشی، بهداشتی، رزیتا، خرید عطر">
+  <meta name="description" content="نمونه کارهای عکاسی محصول توسط رزیتا شامل عکس‌های حرفه‌ای از عطر، لوازم آرایشی و بهداشتی.">
+  <meta name="keywords" content="عکاسی محصول، رزیتا، عطر، آرایشی، بهداشتی، نورپردازی، عکاسی حرفه‌ای">
   <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
-  <title>فروشگاه رزیتا</title>
+  <title>عکاسی محصول رزیتا</title>
   <style>
     body {
       font-family: sans-serif;
@@ -45,31 +45,31 @@
 </head>
 <body>
 
-  <h1>فروشگاه رزیتا</h1>
+  <h1>نمونه‌کارهای عکاسی محصول رزیتا</h1>
 
   <section>
-    <h2>محصولات عطر</h2>
-    <img src="perfumeee.jpg" alt="عطر شماره ۱">
-    <img src="perfume6.jpg" alt="عطر شماره ۲">
+    <h2>عطرها</h2>
+    <img src="perfumeee.jpg" alt="عکاسی عطر ۱">
+    <img src="perfume6.jpg" alt="عکاسی عطر ۲">
   </section>
 
   <section>
-    <h2>محصولات آرایشی</h2>
-    <img src="green2.jpg" alt="محصول آرایشی ۱">
-    <img src="new.roj.jpg" alt="محصول آرایشی ۲">
+    <h2>آرایشی</h2>
+    <img src="green2.jpg" alt="عکاسی آرایشی ۱">
+    <img src="new.roj.jpg" alt="عکاسی آرایشی ۲">
   </section>
 
   <section>
-    <h2>محصولات بهداشتی</h2>
-    <img src="sun.jpg" alt="محصول بهداشتی ۱">
+    <h2>بهداشتی</h2>
+    <img src="sun.jpg" alt="عکاسی بهداشتی ۱">
   </section>
 
   <div class="social">
-    <a href="https://wa.me/989123456789" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساپ">
+    <a href="https://wa.me/989121839844" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساپ رزیتا">
     </a>
-    <a href="https://www.instagram.com/rezitashams" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="اینستاگرام">
+    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="اینستاگرام رزیتا">
     </a>
   </div>
 
