--- a/index.html
+++ b/index.html
@@ -2,76 +2,62 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="نمونه کارهای عکاسی محصول توسط رزیتا شامل عکس‌های حرفه‌ای از عطر، لوازم آرایشی و بهداشتی.">
-  <meta name="keywords" content="عکاسی محصول، رزیتا، عطر، آرایشی، بهداشتی، نورپردازی، عکاسی حرفه‌ای">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>عکاسی تبلیغاتی و محصول حرفه‌ای | رزیتا شمس</title>
+  <meta name="description" content="عکاسی تبلیغاتی و عکاسی محصول حرفه‌ای از لوازم آرایشی، عطر، و محصولات بهداشتی. توسط رزیتا شمس - با نورپردازی تخصصی و زمینه‌های حرفه‌ای." />
   <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
-  <title>عکاسی محصول رزیتا</title>
   <style>
     body {
       font-family: sans-serif;
-      background-color: #f3f0e8;
-      color: #333;
-      margin: 0;
-      padding: 0;
+      background-color: #f9f4f0;
       text-align: center;
+      direction: rtl;
+      padding: 20px;
     }
     h1 {
-      background-color: #d5c4a1;
-      padding: 20px;
-      margin: 0;
+      color: #4a4a4a;
     }
-    section {
-      padding: 20px;
+    .images {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
     }
-    img {
-      width: 150px;
-      margin: 10px;
+    .images img {
+      width: 250px;
+      height: 250px;
+      object-fit: cover;
       border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-    .social {
-      margin: 30px;
+    .social-buttons {
+      margin-top: 30px;
     }
-    .social a img {
-      width: 50px;
-      height: 50px;
-      margin: 0 10px;
-      border-radius: 50%;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    .social-buttons a {
+      margin: 0 15px;
+      text-decoration: none;
+      font-size: 24px;
+      color: #4a4a4a;
     }
   </style>
 </head>
 <body>
+  <h1>عکاسی تبلیغاتی و محصول حرفه‌ای</h1>
+  <p>رزیتا شمس - عکاسی حرفه‌ای از لوازم آرایشی، عطر، و محصولات بهداشتی.</p>
 
-  <h1>نمونه‌کارهای عکاسی محصول رزیتا</h1>
-
-  <section>
-    <h2>عطرها</h2>
-    <img src="perfumeee.jpg" alt="عکاسی عطر ۱">
-    <img src="perfume6.jpg" alt="عکاسی عطر ۲">
-  </section>
-
-  <section>
-    <h2>آرایشی</h2>
-    <img src="green2.jpg" alt="عکاسی آرایشی ۱">
-    <img src="new.roj.jpg" alt="عکاسی آرایشی ۲">
-  </section>
-
-  <section>
-    <h2>بهداشتی</h2>
-    <img src="sun.jpg" alt="عکاسی بهداشتی ۱">
-  </section>
-
-  <div class="social">
-    <a href="https://wa.me/989121839844" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساپ رزیتا">
-    </a>
-    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="اینستاگرام رزیتا">
-    </a>
+  <div class="images">
+    <img src="green2.jpg" alt="عکاسی حرفه‌ای از لوازم آرایشی" />
+    <img src="perfumeee.jpg" alt="عکاسی حرفه‌ای از عطر" />
+    <img src="perfumeee6.jpg" alt="عکاسی حرفه‌ای از عطر" />
+    <img src="newroj.jpg" alt="عکاسی از محصولات آرایشی" />
+    <img src="sun.jpg" alt="عکاسی از محصولات بهداشتی" />
   </div>
 
+  <div class="social-buttons">
+    <a href="https://wa.me/09121839844" target="_blank">واتساپ</a>
+    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">اینستاگرام</a>
+  </div>
 </body>
 </html>
