--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
       color: #4a4a4a;
     }
     .images {
-      display: flex;
+      display: flex;<h2>عطرها</h2>
+<div class="images">
+  <img src="perfumeee.jpg" alt="عکاسی حرفه‌ای از عطر" />
+  <img src="perfumeee6.jpg" alt="عکاسی حرفه‌ای از عطر" />
+</div>
+
+<h2>آرایشی</h2>
+<div class="images">
+  <img src="green2.jpg" alt="عکاسی حرفه‌ای از لوازم آرایشی" />
+  <img src="newroj.jpg" alt="عکاسی از محصولات آرایشی" />
+</div>
+
+<h2>بهداشتی</h2>
+<div class="images">
+  <img src="sun.jpg" alt="عکاسی از محصولات بهداشتی" />
+</div>
       justify-content: center;
       flex-wrap: wrap;
       gap: 20px;
