--- a/index.html
+++ b/index.html
@@ -4,75 +4,83 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>عکاسی تبلیغاتی و محصول حرفه‌ای | رزیتا شمس</title>
-  <meta name="description" content="عکاسی تبلیغاتی و عکاسی محصول حرفه‌ای از لوازم آرایشی، عطر، و محصولات بهداشتی. توسط رزیتا شمس - با نورپردازی تخصصی و زمینه‌های حرفه‌ای." />
+  <title>استودیو تخصصی رزیتا شمس - عکاسی تبلیغات و محصول</title>
+  <meta name="description" content="استودیو تخصصی رزیتا شمس - عکاسی حرفه‌ای از محصولات آرایشی، عطر و بهداشتی با نورپردازی تبلیغاتی و پس‌زمینه‌های خاص." />
   <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
   <style>
     body {
       font-family: sans-serif;
-      background-color: #f9f4f0;
+      background-color: #f8f0e3;
       text-align: center;
       direction: rtl;
       padding: 20px;
+      color: #333;
     }
     h1 {
-      color: #4a4a4a;
+      font-size: 28px;
+      margin-bottom: 5px;
+    }
+    h2 {
+      font-size: 22px;
+      margin-top: 30px;
+      color: #874d4d;
     }
     .images {
-      display: flex;<h2>عطرها</h2>
-<div class="images">
-  <img src="perfumeee.jpg" alt="عکاسی حرفه‌ای از عطر" />
-  <img src="perfumeee6.jpg" alt="عکاسی حرفه‌ای از عطر" />
-</div>
-
-<h2>آرایشی</h2>
-<div class="images">
-  <img src="green2.jpg" alt="عکاسی حرفه‌ای از لوازم آرایشی" />
-  <img src="newroj.jpg" alt="عکاسی از محصولات آرایشی" />
-</div>
-
-<h2>بهداشتی</h2>
-<div class="images">
-  <img src="sun.jpg" alt="عکاسی از محصولات بهداشتی" />
-</div>
-      justify-content: center;
+      display: flex;
       flex-wrap: wrap;
+      justify-content: center;
       gap: 20px;
-      margin-top: 20px;
+      margin-top: 10px;
     }
     .images img {
-      width: 250px;
-      height: 250px;
+      width: 220px;
+      height: 220px;
       object-fit: cover;
-      border-radius: 10px;
+      border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     .social-buttons {
-      margin-top: 30px;
+      margin-top: 40px;
     }
     .social-buttons a {
-      margin: 0 15px;
+      display: inline-block;
+      margin: 10px;
+      padding: 10px 20px;
+      background-color: #25d366;
+      color: white;
+      border-radius: 8px;
       text-decoration: none;
-      font-size: 24px;
-      color: #4a4a4a;
+      font-weight: bold;
+    }
+    .social-buttons a.instagram {
+      background-color: #e1306c;
     }
   </style>
 </head>
 <body>
-  <h1>عکاسی تبلیغاتی و محصول حرفه‌ای</h1>
-  <p>رزیتا شمس - عکاسی حرفه‌ای از لوازم آرایشی، عطر، و محصولات بهداشتی.</p>
+  <h1>استودیو تخصصی رزیتا شمس</h1>
+  <p>عکاسی تبلیغات و محصول با نورپردازی حرفه‌ای</p>
 
+  <h2>محصولات آرایشی</h2>
   <div class="images">
-    <img src="green2.jpg" alt="عکاسی حرفه‌ای از لوازم آرایشی" />
-    <img src="perfumeee.jpg" alt="عکاسی حرفه‌ای از عطر" />
-    <img src="perfumeee6.jpg" alt="عکاسی حرفه‌ای از عطر" />
-    <img src="newroj.jpg" alt="عکاسی از محصولات آرایشی" />
+    <img src="green2.jpg" alt="عکس حرفه‌ای از لوازم آرایشی" />
+    <img src="new.roj.jpg" alt="عکاسی تبلیغاتی رژ لب" />
+  </div>
+
+  <h2>عطرها</h2>
+  <div class="images">
+    <img src="perfumeee.jpg" alt="عکاسی تبلیغاتی از عطر زنانه" />
+    <img src="perfume6.jpg" alt="عکاسی حرفه‌ای از عطر مردانه" />
+  </div>
+
+  <h2>محصولات بهداشتی</h2>
+  <div class="images">
     <img src="sun.jpg" alt="عکاسی از محصولات بهداشتی" />
   </div>
 
   <div class="social-buttons">
-    <a href="https://wa.me/09121839844" target="_blank">واتساپ</a>
-    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank">اینستاگرام</a>
+    <a href="https://wa.me/989121839844" target="_blank">واتساپ</a>
+    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" class="instagram" target="_blank">اینستاگرام</a>
   </div>
 </body>
 </html>
