--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>استودیو رزیتا شمس - عکاسی تبلیغاتی محصول و مواد غذایی</title>
+  <title>استودیو رزیتا شمس - عکاسی تبلیغاتی محصول، آرایشی و بهداشتی</title>
 
   <!-- SEO -->
-  <meta name="description" content="استودیو رزیتا شمس، عکاسی تبلیغاتی از محصولات آرایشی، بهداشتی و مواد غذایی با نورپردازی حرفه‌ای." />
+  <meta name="description" content="استودیو رزیتا شمس، عکاسی تبلیغاتی تخصصی از محصولات آرایشی، بهداشتی، عطر و مواد غذایی با نورپردازی حرفه‌ای و طراحی مینیمال." />
+  <meta name="keywords" content="عکاسی تبلیغاتی, استودیو عکاسی, عکاسی محصول, آرایشی, بهداشتی, عطر, رزیتا شمس" />
+  <meta name="author" content="Rozita Shams Studio" />
   <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph for Social Media -->
   <meta property="og:title" content="استودیو رزیتا شمس - عکاسی تبلیغاتی" />
-  <meta property="og:description" content="عکاسی تخصصی محصولات با نورپردازی تبلیغاتی. آرایشی، بهداشتی، مواد غذایی." />
+  <meta property="og:description" content="نمونه‌کارهای حرفه‌ای عکاسی محصول توسط رزیتا شمس. تخصص در آرایشی، بهداشتی، عطر و غذا." />
   <meta property="og:image" content="https://rozitashams.github.io/cover.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rozitashams.github.io/" />
@@ -32,18 +34,37 @@
       margin-bottom: 10px;
     }
 
-    .slideshow {
+    .marquee {
       width: 100%;
-      max-width: 600px;
-      margin: 20px auto;
-      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+      margin: 30px 0;
+      background: #fff;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
-    .slideshow img {
-      width: 100%;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    .marquee-content {
+      display: flex;
+      animation: scroll 20s linear infinite;
+    }
+
+    .marquee-content img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      margin: 10px;
+      border-radius: 10px;
+    }
+
+    @keyframes scroll {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+
+    .section-title {
+      font-size: 22px;
+      margin-top: 30px;
+      color: #874d4d;
     }
 
     .images {
@@ -51,7 +72,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 30px;
+      margin-top: 10px;
     }
 
     .images img {
@@ -63,7 +84,7 @@
     }
 
     .social-buttons {
-      margin-top: 40px;
+      margin-top: 50px;
     }
 
     .social-buttons a {
@@ -81,50 +102,44 @@
       background-color: #e1306c;
     }
   </style>
-
-  <script>
-    let index = 0;
-    const images = [
-      "green2.jpg",
-      "new.roj.jpg",
-      "perfumeee.jpg",
-      "perfume6.jpg",
-      "sun.jpg",
-      "ton.jpg",
-      "2024.jpg",
-      "2028.jpg"
-    ];
-
-    function showSlide() {
-      const img = document.getElementById("slide-img");
-      img.src = images[index];
-      index = (index + 1) % images.length;
-    }
-
-    window.onload = function () {
-      showSlide();
-      setInterval(showSlide, 3000); // هر 3 ثانیه عکس عوض می‌شود
-    };
-  </script>
 </head>
 <body>
   <h1>استودیو رزیتا شمس</h1>
-  <p>عکاسی تبلیغاتی حرفه‌ای محصولات آرایشی، بهداشتی و غذایی</p>
+  <p>عکاسی تخصصی محصول، آرایشی، عطر و بهداشتی با نورپردازی تبلیغاتی</p>
 
-  <div class="slideshow">
-    <img id="slide-img" src="" alt="نمونه عکس تبلیغاتی" />
+  <!-- نوار اسلایدی -->
+  <div class="marquee">
+    <div class="marquee-content">
+      <img src="green2.jpg" alt="عکاسی از لاک ناخن با تم نود" />
+      <img src="new.roj.jpg" alt="رژ مایع و مداد لب در نور استودیویی" />
+      <img src="20250801.jpg" alt="رژ لب قرمز روی زمینه سفید" />
+      <img src="perfumeee.jpg" alt="عطر زنانه در نور ملایم" />
+      <img src="perfume6.jpg" alt="عطر مردانه با پس‌زمینه کلاسیک" />
+      <img src="sun.jpg" alt="محصولات بهداشتی پوست" />
+      <img src="ton.jpg" alt="تونر پوست با طراحی مینیمال" />
+      <img src="20240204.jpg" alt="محصول بهداشتی بسته‌بندی ساده" />
+    </div>
   </div>
 
-  <h2>نمونه‌کارها</h2>
+  <!-- دسته‌بندی‌ها -->
+  <h2 class="section-title">محصولات آرایشی</h2>
   <div class="images">
-    <img src="green2.jpg" alt="عکاسی از لاک ناخن در زمینه فانتزی" />
-    <img src="new.roj.jpg" alt="عکاسی تبلیغاتی رژ مایع و مداد لب" />
-    <img src="perfumeee.jpg" alt="عطر زنانه در نورپردازی حرفه‌ای" />
-    <img src="perfume6.jpg" alt="عطر مردانه در زمینه تیره تبلیغاتی" />
-    <img src="sun.jpg" alt="عکس از محصولات بهداشتی پوست" />
-    <img src="ton.jpg" alt="عکاسی بهداشتی با رنگ‌های ملایم" />
-    <img src="2024.jpg" alt="محصول بهداشتی با نورپردازی استودیویی" />
-    <img src="2028.jpg" alt="رژ لب تبلیغاتی با نور ملایم" />
+    <img src="green2.jpg" alt="لاک ناخن تبلیغاتی" />
+    <img src="new.roj.jpg" alt="رژ لب و مداد لب حرفه‌ای" />
+    <img src="20250801.jpg" alt="رژ لب در پس‌زمینه روشن" />
+  </div>
+
+  <h2 class="section-title">عطرها</h2>
+  <div class="images">
+    <img src="perfumeee.jpg" alt="عطر زنانه با نور هنری" />
+    <img src="perfume6.jpg" alt="عطر مردانه تبلیغاتی" />
+  </div>
+
+  <h2 class="section-title">محصولات بهداشتی</h2>
+  <div class="images">
+    <img src="sun.jpg" alt="کرم ضدآفتاب و مرطوب‌کننده" />
+    <img src="ton.jpg" alt="تونر ملایم با بسته‌بندی نود" />
+    <img src="20240204.jpg" alt="محصول پاک‌سازی پوست" />
   </div>
 
   <div class="social-buttons">
