--- a/index.html
+++ b/index.html
@@ -2,149 +2,159 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>استودیو رزیتا شمس - عکاسی تبلیغاتی محصول، آرایشی و بهداشتی</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="استدیو تخصصی تبلیغاتی محصولات آرایشی بهداشتی">
+  <meta name="keywords" content="عطر, آرایشی, بهداشتی, تبلیغات, استدیو, محصولات زیبایی">
+  <meta name="author" content="Rozita Shams">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>استدیو تبلیغاتی Rozita Shams</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <!-- SEO -->
-  <meta name="description" content="استودیو رزیتا شمس، عکاسی تبلیغاتی تخصصی از محصولات آرایشی، بهداشتی، عطر و مواد غذایی با نورپردازی حرفه‌ای و طراحی مینیمال." />
-  <meta name="keywords" content="عکاسی تبلیغاتی, استودیو عکاسی, عکاسی محصول, آرایشی, بهداشتی, عطر, رزیتا شمس" />
-  <meta name="author" content="Rozita Shams Studio" />
-  <meta name="google-site-verification" content="UGibxzx_Jz8SNy6TRpiqblyPfqqkTTf9fAdJ_1KkNa8" />
-
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="استودیو رزیتا شمس - عکاسی تبلیغاتی" />
-  <meta property="og:description" content="نمونه‌کارهای حرفه‌ای عکاسی محصول توسط رزیتا شمس. تخصص در آرایشی، بهداشتی، عطر و غذا." />
-  <meta property="og:image" content="https://rozitashams.github.io/cover.jpg" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://rozitashams.github.io/" />
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f8f0e3;
-      text-align: center;
-      direction: rtl;
-      color: #333;
-      padding: 20px;
-    }
+    body { font-family: sans-serif; direction: rtl; padding: 20px; background-color: #fdfdfd; }
+    header { display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; }
+    .logo { height: 60px; }
+    h1 { font-size: 1.5em; margin: 10px; }
 
-    h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
+    .swiper { width: 100%; margin: 20px 0; }
+    .swiper-slide { text-align: center; }
+    .swiper-slide img { width: 100%; height: 180px; object-fit: cover; border-radius: 10px; }
+    .caption { margin-top: 5px; font-size: 0.9em; color: #444; }
 
-    .marquee {
-      width: 100%;
-      overflow: hidden;
-      border-radius: 12px;
-      margin: 30px 0;
-      background: #fff;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
+    h2 { margin-top: 40px; border-bottom: 2px solid #444; padding-bottom: 5px; font-size: 1.2em; }
 
-    .marquee-content {
-      display: flex;
-      animation: scroll 20s linear infinite;
-    }
-
-    .marquee-content img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      margin: 10px;
-      border-radius: 10px;
-    }
-
-    @keyframes scroll {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-
-    .section-title {
-      font-size: 22px;
-      margin-top: 30px;
-      color: #874d4d;
-    }
-
-    .images {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
-
-    .images img {
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .social-buttons {
-      margin-top: 50px;
-    }
-
-    .social-buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 10px 20px;
-      background-color: #25d366;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .social-buttons a.instagram {
-      background-color: #e1306c;
-    }
+    .social { position: fixed; bottom: 20px; left: 20px; display: flex; flex-direction: column; gap: 10px; }
+    .social a { text-decoration: none; padding: 10px 15px; background-color: #25D366; color: white; border-radius: 5px; font-weight: bold; display: inline-block; }
+    .instagram { background-color: #C13584; }
   </style>
 </head>
 <body>
-  <h1>استودیو رزیتا شمس</h1>
-  <p>عکاسی تخصصی محصول، آرایشی، عطر و بهداشتی با نورپردازی تبلیغاتی</p>
 
-  <!-- نوار اسلایدی -->
-  <div class="marquee">
-    <div class="marquee-content">
-      <img src="green2.jpg" alt="عکاسی از لاک ناخن با تم نود" />
-      <img src="new.roj.jpg" alt="رژ مایع و مداد لب در نور استودیویی" />
-      <img src="20250801.jpg" alt="رژ لب قرمز روی زمینه سفید" />
-      <img src="perfumeee.jpg" alt="عطر زنانه در نور ملایم" />
-      <img src="perfume6.jpg" alt="عطر مردانه با پس‌زمینه کلاسیک" />
-      <img src="sun.jpg" alt="محصولات بهداشتی پوست" />
-      <img src="ton.jpg" alt="تونر پوست با طراحی مینیمال" />
-      <img src="20240204.jpg" alt="محصول بهداشتی بسته‌بندی ساده" />
+<header>
+  <img src="logo.png" alt="لوگوی استدیو Rozita Shams" class="logo">
+  <h1>استدیو تخصصی تبلیغاتی محصولات آرایشی بهداشتی</h1>
+</header>
+
+<!-- اسلایدر اصلی -->
+<div class="swiper main-slider">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="green2.jpg" alt="لاک سبز">
+      <div class="caption">لاک سبز</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="Perfume6.jpg" alt="عطر شماره ۶">
+      <div class="caption">عطر شماره ۶</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="perfumeee.jpg" alt="عطر دیگر">
+      <div class="caption">عطر دیگر</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="New.roj.jpg" alt="رژ جدید">
+      <div class="caption">رژ جدید</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="20240801-12059.jpg" alt="رژ لب">
+      <div class="caption">رژ لب</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="Sun.jpg" alt="ضد آفتاب">
+      <div class="caption">ضد آفتاب</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="ton.jpg" alt="تونر">
+      <div class="caption">تونر</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="20240204-165135.jpg" alt="نرم‌کننده">
+      <div class="caption">نرم‌کننده</div>
     </div>
   </div>
+</div>
 
-  <!-- دسته‌بندی‌ها -->
-  <h2 class="section-title">محصولات آرایشی</h2>
-  <div class="images">
-    <img src="green2.jpg" alt="لاک ناخن تبلیغاتی" />
-    <img src="new.roj.jpg" alt="رژ لب و مداد لب حرفه‌ای" />
-    <img src="20250801.jpg" alt="رژ لب در پس‌زمینه روشن" />
+<!-- دسته‌بندی عطرها -->
+<h2>عطرها</h2>
+<div class="swiper perfume-slider">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="Perfume6.jpg" alt="عطر شماره ۶">
+      <div class="caption">عطر شماره ۶</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="perfumeee.jpg" alt="عطر دیگر">
+      <div class="caption">عطر دیگر</div>
+    </div>
   </div>
+</div>
 
-  <h2 class="section-title">عطرها</h2>
-  <div class="images">
-    <img src="perfumeee.jpg" alt="عطر زنانه با نور هنری" />
-    <img src="perfume6.jpg" alt="عطر مردانه تبلیغاتی" />
+<!-- دسته‌بندی آرایشی -->
+<h2>آرایشی</h2>
+<div class="swiper makeup-slider">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="green2.jpg" alt="لاک سبز">
+      <div class="caption">لاک سبز</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="New.roj.jpg" alt="رژ جدید">
+      <div class="caption">رژ جدید</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="20240801-12059.jpg" alt="رژ لب">
+      <div class="caption">رژ لب</div>
+    </div>
   </div>
+</div>
 
-  <h2 class="section-title">محصولات بهداشتی</h2>
-  <div class="images">
-    <img src="sun.jpg" alt="کرم ضدآفتاب و مرطوب‌کننده" />
-    <img src="ton.jpg" alt="تونر ملایم با بسته‌بندی نود" />
-    <img src="20240204.jpg" alt="محصول پاک‌سازی پوست" />
+<!-- دسته‌بندی بهداشتی -->
+<h2>بهداشتی</h2>
+<div class="swiper health-slider">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="Sun.jpg" alt="ضد آفتاب">
+      <div class="caption">ضد آفتاب</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="ton.jpg" alt="تونر">
+      <div class="caption">تونر</div>
+    </div>
+    <div class="swiper-slide">
+      <img src="20240204-165135.jpg" alt="نرم‌کننده">
+      <div class="caption">نرم‌کننده</div>
+    </div>
   </div>
+</div>
 
-  <div class="social-buttons">
-    <a href="https://wa.me/989121839844" target="_blank">واتساپ</a>
-    <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" class="instagram" target="_blank">اینستاگرام</a>
-  </div>
+<!-- دکمه‌ها -->
+<div class="social">
+  <a href="https://wa.me/989121839844" target="_blank">واتساپ: 09121839844</a>
+  <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank" class="instagram">اینستاگرام</a>
+</div>
+
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  const options = {
+    slidesPerView: 2,
+    spaceBetween: 10,
+    loop: true,
+    autoplay: {
+      delay: 3000,
+    },
+    breakpoints: {
+      768: { slidesPerView: 4 }
+    }
+  };
+
+  new Swiper('.main-slider', options);
+  new Swiper('.perfume-slider', options);
+  new Swiper('.makeup-slider', options);
+  new Swiper('.health-slider', options);
+</script>
+
 </body>
 </html>
