--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="استدیو تخصصی تبلیغاتی محصولات آرایشی بهداشتی">
-  <meta name="keywords" content="عطر, آرایشی, بهداشتی, تبلیغات, استدیو, محصولات زیبایی">
+  <meta name="keywords" content="عطر, آرایشی, بهداشتی, تبلیغات, استدیو, زیبایی">
   <meta name="author" content="Rozita Shams">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>استدیو تبلیغاتی Rozita Shams</title>
@@ -14,27 +14,77 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <style>
-    body { font-family: sans-serif; direction: rtl; padding: 20px; background-color: #fdfdfd; }
-    header { display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; }
-    .logo { height: 60px; }
-    h1 { font-size: 1.5em; margin: 10px; }
-
-    .swiper { width: 100%; margin: 20px 0; }
-    .swiper-slide { text-align: center; }
-    .swiper-slide img { width: 100%; height: 180px; object-fit: cover; border-radius: 10px; }
-    .caption { margin-top: 5px; font-size: 0.9em; color: #444; }
-
-    h2 { margin-top: 40px; border-bottom: 2px solid #444; padding-bottom: 5px; font-size: 1.2em; }
-
-    .social { position: fixed; bottom: 20px; left: 20px; display: flex; flex-direction: column; gap: 10px; }
-    .social a { text-decoration: none; padding: 10px 15px; background-color: #25D366; color: white; border-radius: 5px; font-weight: bold; display: inline-block; }
-    .instagram { background-color: #C13584; }
+    body {
+      font-family: sans-serif;
+      direction: rtl;
+      padding: 20px;
+      background-color: #fdfdfd;
+      margin-bottom: 100px;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .logo {
+      height: 60px;
+    }
+    h1 {
+      font-size: 1.5em;
+      margin: 10px;
+    }
+    .swiper {
+      width: 100%;
+      margin: 20px 0;
+    }
+    .swiper-slide {
+      text-align: center;
+    }
+    .swiper-slide img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    .caption {
+      margin-top: 5px;
+      font-size: 0.9em;
+      color: #444;
+    }
+    h2 {
+      margin-top: 40px;
+      border-bottom: 2px solid #444;
+      padding-bottom: 5px;
+      font-size: 1.2em;
+    }
+    .social {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .social a {
+      text-decoration: none;
+      padding: 10px 15px;
+      background-color: #25D366;
+      color: white;
+      border-radius: 5px;
+      font-weight: bold;
+      display: inline-block;
+    }
+    .instagram {
+      background-color: #C13584;
+    }
   </style>
 </head>
 <body>
 
 <header>
-  <img src="logo.png" alt="لوگوی استدیو Rozita Shams" class="logo">
+  <img src="Logo.png" alt="لوگوی استدیو Rozita Shams" class="logo">
   <h1>استدیو تخصصی تبلیغاتی محصولات آرایشی بهداشتی</h1>
 </header>
 
@@ -46,16 +96,16 @@
       <div class="caption">لاک سبز</div>
     </div>
     <div class="swiper-slide">
-      <img src="Perfume6.jpg" alt="عطر شماره ۶">
-      <div class="caption">عطر شماره ۶</div>
+      <img src="Perfume6.jpg" alt="عطر">
+      <div class="caption">عطر</div>
     </div>
     <div class="swiper-slide">
       <img src="perfumeee.jpg" alt="عطر دیگر">
       <div class="caption">عطر دیگر</div>
     </div>
     <div class="swiper-slide">
-      <img src="New.roj.jpg" alt="رژ جدید">
-      <div class="caption">رژ جدید</div>
+      <img src="new.roj.jpg" alt="رژ">
+      <div class="caption">رژ</div>
     </div>
     <div class="swiper-slide">
       <img src="20240801-12059.jpg" alt="رژ لب">
@@ -81,8 +131,8 @@
 <div class="swiper perfume-slider">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
-      <img src="Perfume6.jpg" alt="عطر شماره ۶">
-      <div class="caption">عطر شماره ۶</div>
+      <img src="Perfume6.jpg" alt="عطر">
+      <div class="caption">عطر</div>
     </div>
     <div class="swiper-slide">
       <img src="perfumeee.jpg" alt="عطر دیگر">
@@ -100,8 +150,8 @@
       <div class="caption">لاک سبز</div>
     </div>
     <div class="swiper-slide">
-      <img src="New.roj.jpg" alt="رژ جدید">
-      <div class="caption">رژ جدید</div>
+      <img src="new.roj.jpg" alt="رژ">
+      <div class="caption">رژ</div>
     </div>
     <div class="swiper-slide">
       <img src="20240801-12059.jpg" alt="رژ لب">
@@ -129,7 +179,7 @@
   </div>
 </div>
 
-<!-- دکمه‌ها -->
+<!-- دکمه‌های شبکه اجتماعی -->
 <div class="social">
   <a href="https://wa.me/989121839844" target="_blank">واتساپ: 09121839844</a>
   <a href="https://www.instagram.com/rozita_shams_studio?igsh=ZzM0cXRidmV3eThu" target="_blank" class="instagram">اینستاگرام</a>
